--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -26,3 +26,14 @@ main div.container div.row div[class^="col"] div.card img {
     width: 150px;
     height: auto;
 }
+footer{
+    background-color: #dde7e7;
+}
+#cizgi{
+    border-right: 1px solid black;
+}
+#cizgi a,
+#footsosyal a{
+   text-decoration: none;
+   color:#18b8ba
+}
